Add @scure/btc-signer to benchmarks
Introduce @scure/btc-signer into the benchmark suite and update docs/harness to include its results.

Changes include:
- BENCHMARK.md: add scure to environment, results, comparisons and analysis.
- compare.bench.ts: import @scure/btc-signer and @noble/curves, derive scure keys, add witness/tx builders for scure, and measure scure in initialization, PSBT/transaction creation, P2WPKH, P2TR, and end-to-end scenarios; include scure results in summary/JSON output.
- harness.ts: extend types and ComparisonRow to include scure, update printComparison to add a Scure column and widen formatting, and improve some docs/formatting.
- package.json: updated to reflect added dependency and environment metadata (bench config).

Overall: expands the benchmark to compare three libraries (@btc-vision/bitcoin, bitcoinjs-lib, @scure/btc-signer) and surfaces scure's performance alongside existing results.

--- a/benchmark-compare/package.json
+++ b/benchmark-compare/package.json
@@ -9,6 +9,7 @@
     "bench:gc": "node --expose-gc --import tsx compare.bench.ts"
   },
   "devDependencies": {
+    "@scure/btc-signer": "^2.0.1",
     "bitcoinjs-lib": "^7.0.1",
     "ecpair": "^3.0.0",
     "tiny-secp256k1": "^2.2.4",
