--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@btc-vision/bitcoin",
     "type": "module",
-    "version": "7.0.0-beta.1",
+    "version": "7.0.0-rc.5",
     "sideEffects": false,
     "description": "Client-side Bitcoin JavaScript library",
     "engines": {
