Add timingSafeEqual and relax tsconfig check
Introduce timingSafeEqual(Uint8Array, Uint8Array) for constant-time comparisons of security-sensitive byte sequences and update the equals() JSDoc to warn about its non-constant-time behavior. timingSafeEqual compares all bytes using XOR accumulation to avoid timing side-channels. Also flip tsconfig.base.json noUncheckedIndexedAccess from true to false to relax strict index checks (reduce noise/compatibility issues). Files changed: src/io/utils.ts, tsconfig.base.json.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,7 @@
         "exactOptionalPropertyTypes": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedIndexedAccess": true,
+        "noUncheckedIndexedAccess": false,
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "module": "ESNext",
